@startuml messaging-state
' Context: messaging
' Profile: client
' Revision: 2026-07-19

title Messaging — stato conversazione (composite)

state "Caricamento" as CL {
  state Loading
  state Ready
  state SessionBlocked

  [*] --> Loading
  Loading --> Ready : ConversationReady
  Loading --> SessionBlocked : ConversationUnavailable
  Ready --> Loading : RefreshConversation
  SessionBlocked --> Loading : RefreshConversation
}

state "Invio" as OS {
  state Idle
  state Sending
  state FailedQueue

  [*] --> Idle
  Idle --> Sending : SendContent
  Sending --> Idle : ContentSent
  Sending --> FailedQueue : ContentSendFailed
  FailedQueue --> Sending : RetryFailedSend
}

state "Realtime" as RT {
  state Detached
  state Attached

  [*] --> Detached
  Detached --> Attached : OpenConversation
  Attached --> Detached : CloseConversation
}

note right of Ready
  ConversationUpdated mentre Attached
end note

@enduml
